--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 			<div class="col-12 col-lg-4 service-header-tab">Визуальная <span>анимация</span></div>
 		</div>
 
-		<div class="service-tab row d-none">
+		<div class="service-tab row">
 			<div class="service-outer col-md-6 col-sm-6 col-12">
 				<div class="service-inner">
 					<div class="service-text">
@@ -146,7 +146,7 @@
 		</div>
 
 
-		<div class="service-tab row">
+		<div class="service-tab row d-none">
 			<div class="service-outer col-md-6 col-sm-6 col-12">
 				<div class="service-inner">
 					<p>Услуга, направленная на разработку дизайна с анимацией, дизайн интерьера и экстерьера</p>
@@ -168,22 +168,25 @@
 		<h2>Портфолио</h2>
 		<div class="underline"></div>
 		<ul class="portfolio-content" id="all-progects">
-			<li class="portfolio-item portfolio-item-active"><img src="images/portfilio/portfolio-01.jpg"
-																														alt="portfolio"></li>
+			<li class="portfolio-item portfolio-item-active"><img src="images/portfilio/portfolio-01.jpg" alt="portfolio"></li>
 			<li class="portfolio-item"><img src="images/portfilio/portfolio-04.jpg" alt="portfolio"></li>
 			<li class="portfolio-item"><img src="images/portfilio/portfolio-06.jpg" alt="portfolio"></li>
 			<li class="portfolio-item"><img src="images/portfilio/portfolio-07.jpg" alt="portfolio"></li>
 			<li class="portfolio-item"><img src="images/portfilio/portfolio-08.jpg" alt="portfolio"></li>
 			<li class="portfolio-item"><img src="images/portfilio/portfolio-10.jpg" alt="portfolio"></li>
+			
 			<a href="#" class="portfolio-btn prev" id="arrow-left"></a>
 			<a href="#" class="portfolio-btn next" id="arrow-right"></a>
+
 			<ul class="portfolio-dots">
+<!--
 				<li class="dot dot-active"></li>
 				<li class="dot"></li>
 				<li class="dot"></li>
 				<li class="dot"></li>
 				<li class="dot"></li>
 				<li class="dot"></li>
+-->
 			</ul>
 		</ul>
 	</div>
