--- a/index.html
+++ b/index.html
@@ -421,6 +421,58 @@
 </div>
 
 <script src="js/index.js"></script>
+<script src="js/validator/validator.js"></script>
+
+<script>
+	const validForm1 = new Validator({
+		selector: "#form1",
+		pattern: {
+			name: /^\W+$/gi,
+			email: /\w+@\w+\.\w{2,}/,
+			phone: /\+?[78](-*\d){10}/
+		},
+		method: {
+			"form1-name": [["notEmpty"], ["pattern", "name"]],
+			'form1-email': [["notEmpty"], ["pattern", "email"]],
+			'form1-phone': [["notEmpty"], ["pattern", "phone"]],
+		},
+	});
+
+	const validForm2 = new Validator({
+		selector: "#form2",
+		pattern: {
+			name: /^\W+$/gi,
+			email: /\w+@\w+\.\w{2,}/,
+			phone: /\+?[78](-*\d){10}/
+		},
+		method: {
+			"form2-name": [["notEmpty"], ["pattern", "name"]],
+			"form2-message": [["notEmpty"], ["pattern", "name"]],
+			'form2-email': [["notEmpty"], ["pattern", "email"]],
+			'form2-phone': [["notEmpty"], ["pattern", "phone"]],
+		},
+	});
+
+	const validForm3 = new Validator({
+		selector: "#form3",
+		pattern: {
+			name: /^\W+$/gi,
+			email: /\w+@\w+\.\w{2,}/,
+			phone: /\+?[78](-*\d){10}/
+		},
+		method: {
+			"form3-name": [["notEmpty"], ["pattern", "name"]],
+			'form3-email': [["notEmpty"], ["pattern", "email"]],
+			'form3-phone': [["notEmpty"], ["pattern", "phone"]],
+		},
+	});
+
+	validForm1.init();
+	validForm2.init();
+	validForm3.init();
+	
+</script>
+
 
 </body>
 </html>
